--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+<style>
+		#map {
+	  		height: 100%;
+		}
+
+		html, body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+	</style>
 body {
 	background-color: #808080;
 }
