--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,10 @@
-<style>
-		#map {
-	  		height: 100%;
-		}
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
 
-		html, body {
-			height: 100%;
-			margin: 0;
-			padding: 0;
-		}
-	</style>
 body {
 	background-color: #808080;
 }
